--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,11 +18,13 @@
     "expo": "~44.0.0",
     "expo-av": "~10.2.0",
     "expo-blur": "~11.0.0",
+    "expo-dev-client": "~0.8.4",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-colors": "^1.5.0",
@@ -36,8 +38,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vimeo-iframe": "^1.0.4",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.17.1",
-    "expo-dev-client": "~0.8.4"
+    "react-native-webview": "^11.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
